1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* all.test: New file.
	* Makefile.am (TESTS): Added all.test.

1999-01-07  Tom Tromey  <tromey@cygnus.com>

	* include.test: New file.
	* Makefile.am (TESTS): Added include.test.

1998-12-21  Tom Tromey  <tromey@cygnus.com>

	* insthook.test: Updated to fail when it should.

1998-12-11  Tom Tromey  <tromey@cygnus.com>

	* insthook.test: New file.
	* Makefile.am (TESTS): Added insthook.test.

1998-11-27  Tom Tromey  <tromey@cygnus.com>

	* cond7.test: New file.  From Pavel Roskin.
	* Makefile.am (TESTS): New file.

1998-11-10  Tom Tromey  <tromey@cygnus.com>

	* pluseq4.test: New file.
	* Makefile.am (TESTS): Added pluseq4.test.

1998-11-09  Tom Tromey  <tromey@cygnus.com>

	* pluseq3.test: New file.
	* Makefile.am (TESTS): Added pluseq3.test.

	* pluseq2.test: New file.
	* Makefile.am (TESTS): Added pluseq2.test.

1998-10-30  Tom Tromey  <tromey@cygnus.com>

	* pluseq.test: New file.
	* Makefile.am (TESTS): Added pluseq.test.

1998-10-28  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (distclean-local): Typo fix.

1998-10-20  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (TESTS): Sorted tests.  From Jeff Garzik.

1998-10-13  Tom Tromey  <tromey@cygnus.com>

	* libobj7.test: Updated to reflect minor change in automake (test
	wasn't resilient enough).
	* instman.test: Updated to reflect fact that mkinstalldirs will be
	in distribution.

	* cxxonly.test: Removed.

Mon Aug 31 09:46:59 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* Makefile.am (TESTS): Added compile_f_c_cxx.test.
	* compile_f_c_cxx.test: New file.

Sat Aug 29 18:17:58 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* Makefile.am (TESTS): Added flink.test link_c_cxx.test
	link_f_c.test link_f_c_cxx.test link_f_cxx.test link_f_only.test.
	Removed flink.test.
	* flibs.test: New File.
	* link_c_cxx.test: New file.
	* link_f_c.test: New file.
	* link_f_c_cxx.test: New file.
	* link_f_cxx.test: New file.
	* link_f_only.test: New file.
