@@ -1,14 +1,15 @@
 #! /bin/sh
 
-# Test to make sure all-local works correctly.
+# Test to make sure all-local and other -local targets work correctly.
 
 . $srcdir/defs || exit 1
 
-cat > Makefile.am << 'END'
-all-local:
-	@echo foo
-END
+for target in all install-exec install-data uninstall; do
+   echo "Doing $target"
+   echo "${target}-local:" > Makefile.am
 
-$AUTOMAKE || exit 1
-grep 'all-local all-local' Makefile.in && exit 1
+   $AUTOMAKE || exit 1
+
+   fgrep "${target}-local ${target}-local" Makefile.in && exit 1
+done
 exit 0
