@@ -1,5 +1,7 @@
 1999-01-10  Tom Tromey  <tromey@cygnus.com>
 
+	* all.test: Test all *-local targets, not just all-local.
+
 	* all.test: New file.
 	* Makefile.am (TESTS): Added all.test.
 
